# qualidoo-cli

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  qualido.json
.github/workflows/: python-publish.yml
src/qualidoo/: __init__.py  api_client.py  cli.py  config.py  github.py  org_commands.py  org_resolver.py  output.py  repo_commands.py
tests/: __init__.py  conftest.py  test_api_client.py  test_cli.py  test_config.py  test_github.py  test_org_commands.py  test_org_resolver.py  test_output.py
