[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qualidoo"
version = "0.1.2"
description = "AI-powered Odoo addon quality analyzer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Qualidoo Team" }]
keywords = ["odoo", "quality", "addon", "module", "analyzer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
qualidoo = "qualidoo.cli:app"

[project.urls]
Homepage = "https://qualidoo.aidooit.com"
Repository = "https://github.com/aidooit/qualidoo"

[tool.hatch.build.targets.wheel]
packages = ["src/qualidoo"]
