[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qualidoo"
version = "0.2.0"
description = "AI-powered Odoo addon quality analyzer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Qualidoo Team" }]
keywords = ["odoo", "quality", "addon", "module", "analyzer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.scripts]
qualidoo = "qualidoo.cli:app"

[project.urls]
Homepage = "https://qualidoo.aidooit.com"
Repository = "https://github.com/aidooit/qualidoo"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "respx>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qualidoo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
